Die Anzeigezeiten für das Impulsdrehgeber-Ergebnis verlängert.
Verkürzung des Strompulses der ESR-Messung von 27us auf 8us.
Sperrschichtkapazität bei Diode wird mit 2 Dezimalstellen ausgegeben. 3 Stellen nur bei LCD_LINE_LENGTH > 16 .
Schutzdiode wird bei graphischer Datestellung auch bei bipolaren Transistoren angezeigt.
Neue Optionen LCD_INTERFACE_MODE=2 und LCD_I2C_ADDR für die I2C Schnittstelle des SSD1306 Kontrollers.
Anpassung der Korrekturfunktion für die ESR-Messung kleiner Kapazitäten.
Spezielle Initialisierung des SSD1306 Kontrollers sowie Anpassung der Kontrasteinstellung.
Neue Option LCD_ST7565_H_OFFSET zur besseren Anpassung an die Lage des Displayfensters.
Bei Beginn des Selbsttest wird PartFound auf unerkanntes Bauteil gesetzt.
Fehler beim Freischalten der internen Pull-Up Widerstände beseitigt (no PULLUP-DISABLE).
Bei Menüfunktion Selbsttest wird der Selbsttest auch ohne verbundene Klemmen nach 30 s gestartet (ohne Nullwiderstand).
Bei Überschreitung des Nullwiderstandwertes wird auf Standard ESR_ZERO zurückgesetzt.
Vorzeichenfehler bei ShowData korrigiert.
Reihenfolge der ST7565 Befehle bei der Initialisierung geändert. 
Ohne die Option POWER_OFF gibt es keine Menüfunktion "Schalte aus".
Menüfunktion um Ausgabe der Kalibrationsdaten erweitert (ShowData).
Standard für Anschluß des Impulsdrehgebers auf PD1 und PD2 geändert.
Korrektur der Pinbelegungen für ATmega324/644/1284 .
FAKTOR_ESR für die ESR Korrektur kleiner Kapazitätswerte angepaßt.
Rücksetzen auf unkalibriert nur bei Kondensatoren > 4.5uF und negativem ESR.
Alle Bitmaps für den ST7565 Controller sind in bitmaps.h definiert.
Optimierte Bitmaps für den ST7565 Controller um Platz zu sparen.
Kondensator für Abgleich muß fünf Mal statt zwei Mal hintereinander erkannt werden.
Überlaufproblem bei GetESR (cap_val_nF) beseitigt.
Erkennung von JFET und BJT mit Reststrom nochmals verbessert.
Wartezeit vor der Ausgabe des Hilfetextes entfernt.